soapyuhd (0.1.2) unstable; urgency=low

  * Added GPIO access support for Soapy UHD and vice-versa

 -- Josh Blum <josh@pothosware.com>  Fri, 04 Sep 2015 19:37:28 -0700

soapyuhd (0.1.1) unstable; urgency=low

  * Modifications for ubuntu 12.04 w/ cmake 2.8.7

 -- Josh Blum <josh@pothosware.com>  Sat, 15 Aug 2015 11:32:27 -0700

soapyuhd (0.1.0) unstable; urgency=low

  * Release 0.1.0 (2015-06-15)

 -- Josh Blum <josh@pothosware.com>  Mon, 15 Jun 2015 12:29:52 -0400